<resources>
    <string name="app_name">BancoDeDados_SQLite_Herança</string>

    <string name="txtCriarProduto">Criar Produto</string>
    <string name="txtId">Id:</string>
    <string name="txtNome">Nome:</string>
    <string name="txtCusto">Custo:</string>
    <string name="txtPrecoVenda">Preço da Venda:</string>
    <string name="txtUnidade">Unidade:</string>
    <string name="txtQuantidade">Quantidade de Estoque:</string>
    <string name="txtCategoria">Categoria:</string>

    <string name="hintImputNome">Nome da Souza</string>
    <string name="hintImputCusto">R$ 00,00</string>
    <string name="hintImputPrecoVenda">R$ 00,00</string>
    <string name="hintImputUnidade">Unidade pertencente</string>
    <string name="hintImputQuantidade">0</string>

    <string name="txtBtnAdicionarProduto">Criar</string>
    <string name="txtBtnVoltar">Voltar</string>
</resources>